force-app/main/default/objects/Grand_Child_Object__c/Grand_Child_Object__c.object-meta.xml
<CustomObject>
    <label>Grand Child Object</label>
    <nameField>
        <displayFormat>GC-{0000}</displayFormat>
        <label>Grand Child ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grand Child Objects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>