force-app/main/default/objects/Grand_Child_Object__c/fields/Child_Object__c.field-meta.xml
<CustomField>
    <fullName>Child_Object__c</fullName>
    <label>Child Object</label>
    <referenceTo>Child_Objects__c</referenceTo>
    <relationshipLabel>Grand Child Objects</relationshipLabel>
    <relationshipName>Grand_Child_Objects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>