force-app/main/default/objects/Grand_Child_Object__c/fields/GC_City__c.field-meta.xml
<CustomField>
    <fullName>GC_City__c</fullName>
    <label>GC City</label>
    <length>10</length>
    <type>Text</type>
</CustomField>