force-app/main/default/objects/Grand_Child_Object__c/fields/GC_Name__c.field-meta.xml
<CustomField>
    <fullName>GC_Name__c</fullName>
    <label>GC Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>